<resources>
    <string name="app_name">AplikasiPortofolio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login_here">login here</string>
    <string name="register_here">register here</string>
    <string name="logout">Logout</string>
    <string name="add_new_goal">Add new Goal</string>
    <string name="hello">Hello, </string>
</resources>